# pdf-splitter

./: .gitignore  chapter_summary.py  chapter_summary2.py  prompts.py  pyproject.toml  split_pdf.py
