[tool.poetry]
name = "pdf-splitter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
anthropic = "^0.26.1"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"
black = "^24.4.2"
reportlab = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
